fixed broken css which caused tabbed layout mess

--- a/css/1.css
+++ b/css/1.css
@@ -25,7 +25,7 @@ body {
 	font: 78.5%/1.6em "Lucida Grande", "Lucida Sans Unicode", verdana, geneva, sans-serif;
 	word-spacing:2px;
 	color:#444;
-	margin:10px;
+	margin:20px;
 	background:url(../images/body.jpg) #f6f6f6;
 }
 
@@ -343,6 +343,19 @@ body {
 	padding:20px 0 0 20px;
 }
 
+#content ul { 	 
+	         margin:15px 0 15px 0; 	 
+	         line-height:25px; 	 
+	         padding:15px 0 15px 15px; 	 
+	         border-top:1px solid #eee; 	 
+	         border-bottom:1px solid #eee; 	 
+	         color:#79B933; 	 
+}
+
+#content ul span { 	 
+         color:#444; 	 
+}
+
 #contentnorightbar {
 	margin:0 0 0 240px;
 	background:url(../images/content.jpg) top left no-repeat;
@@ -396,7 +409,7 @@ h3 {
 }
 
 #contentnorightbar ul {
-	margin-top:1px;
+        margin:15px 0 15px 20px;
 	text-align:left;
 	list-style-type: none;
 	border:	0px;
@@ -404,7 +417,7 @@ h3 {
 	color:#79B933;
 }
 
-#contentnorightbar li {
+li.fieldset {
 	clear:left;
 	padding-top:1px;
 }
@@ -482,7 +495,7 @@ label.form {
 
 }
 
-label.old {
+label.dorm {
 	background-position:left;
 
 	color:#646729;
